# open_manipulator_potman

./: 2019_RBIZ_Open_manipulator_AuturboTeam.pptx  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: darknet_config.yaml  output_pour.txt  output_serve.txt
launch/: darknet_jsk.launch  key_command.launch  potman.launch  yolo_jsk_pose.launch
nodes/: cheersActionByYoloJskClass.py  fileActionClass.py  key_command  potman_state_machine  trackingActionClass.py
rviz/: yolo.rviz  yolo_depth.rviz
